--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
              <h1>CONTACT US</h1>
              <div class="row">
              <div class="col-md-6">
-             <form class="contact-form" action="contactform.js"  method= "post" >
+             <form class="contact-form" action="contactform/contactform.php"  method= "post" >
              <div class="form-group">
              <input type="text" class="form-control" placeholder=" Name">    
              </div>
