--- a/index.html
+++ b/index.html
@@ -351,20 +351,20 @@
              <h1>CONTACT US</h1>
              <div class="row">
              <div class="col-md-6">
-             <form class="contact-form" action="contactform/contactform.php"  method= "post" >
+             <form class="contact-form" action="index.php"  method= "post" >
              <div class="form-group">
-             <input type="text" class="form-control" placeholder=" Name">    
+             <input type="text" name= "name"  placeholder="FullName">    
+               </div>
+             <div class="form-group">
+             <input type="text " name="mail " placeholder="Your e-mail ">    
+             </div>
+               <div class="form-group">
+             <input type="text " name="subject " placeholder="Subject ">    
              </div>
              <div class="form-group">
-             <input type="number" class="form-control" placeholder="Phone">    
+             <textarea  placeholder="Message "></textarea>    
              </div>
-             <div class="form-group">
-             <input type="email" class="form-control" placeholder="E-mail adress">    
-             </div>
-             <div class="form-group">
-             <textarea class="form-control" rows="4" placeholder="Your message"></textarea>    
-             </div>
-             <button type="submit" class="btn btn-primary"> Send</button>
+             <button type="submit" class="btn btn-primary" name = "submit" > Send</button>
              </form>
              </div>
              <div class="col-md-6 contact-info">
