--- a/index.html
+++ b/index.html
@@ -348,9 +348,8 @@
 
         <section id="contact">
           <div class="container">
-            <div class="contact-form">
         <h2>Contact Us</h2>
-        <form class="contact" action="sendemail.php" method="post">
+        <form class="contact" action="" method="post">
           <input type="text" name="name" class="text-box" placeholder="Your Name" required>
           <input type="email" name="email" class="text-box" placeholder="Your Email" required>
           <textarea name="message" rows="5" placeholder="Your Message" required><textarea>
