--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
+  <!-- Favicons -->
+ <link href="favicon.jpg" rel="apple-touch-icon">
  
 
   <!-- Google Fonts -->
