--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
   <!-- Favicons -->
- <link href="favicon.jpg" rel="apple-touch-icon">
+ <link href="favicon.jpg" rel="favicon ">
  
 
   <!-- Google Fonts -->
