--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
   <!-- Favicons -->
- <link href="favicon.jpg" rel="favicon ">
+ <link href="img/favicon.png" rel="apple-touch-icon">
+ 
  
 
   <!-- Google Fonts -->
