--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
   <!-- Favicons -->
- <link href="img/favicon.png" rel="apple-touch-icon">
+ <link href="img/favicon.png" rel="shortcut icon" >
  
  
 
