--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li><a href="#services">RESULTS</a></li>
           <li><a href="#clients">RULES</a></li>
           <li><a href="#contact">CONTACT</a></li>
+          <li><a href="#Paiement"> PAIMENT</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
