--- a/index.html
+++ b/index.html
@@ -377,12 +377,12 @@
                     <i class="fa fa-desktop"></i>
                     </div>
                     <h3>RESULTS</h3>
-                    <h1> <p>Veuillez payer les frais  du tournoi  directement à l’admin du Tournoi 
+                  <p>Veuillez payer les frais  du tournoi  directement à l’admin du Tournoi 
 par La Carte « e-Dinar Jeune » de la poste tunisienne via D17  une application mobile pour Smartphone et IOS associée à votre compte 
 e-Dinar et vous permet la réalisation des paiements via QR code en toute sécurité et rapidité sinon par par virement bancaire 
 Pour toute question relative au règlement, merci de nous contacter au
 mail suivant : clashnow0@gmail.com
-</p>  </h1>
+</p> 
                 </div>
               
         </div>     
