--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@
             <div class="row services">
                 <div class="col-md-3 text-center">
                     <div class="icon">
-                    <i class="fa fa-desktop"></i>
+                    <i class="hand-holding-usd"></i>
                     </div>
-                    <h3>RESULTS</h3>
+                    <h3>PAIMENT</h3>
                   <p>Veuillez payer les frais  du tournoi  directement à l’admin du Tournoi 
 par La Carte « e-Dinar Jeune » de la poste tunisienne via D17  une application mobile pour Smartphone et IOS associée à votre compte 
 e-Dinar et vous permet la réalisation des paiements via QR code en toute sécurité et rapidité sinon par par virement bancaire 
