--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
             <div class="row services">
                 <div class="col-md-3 text-center">
                     <div class="icon">
-                    <i class="hand-holding-usd"></i>
+                   <i class="fa fa-credit-card" aria-hidden="true"></i>
+
                     </div>
                     <h3>PAIMENT</h3>
                   <p>Veuillez payer les frais  du tournoi  directement à l’admin du Tournoi 
