--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         <div class="row services">
           <div class="col-md-3 text-center">
               <div class="icon">
-              <i class="fa fa-desktop"></i>
+<i class="fa fa-gavel" aria-hidden="true"></i>
               </div>
               <h1>RULES</h1>
               <p>All players must be online and ready to play at the match times defined by ClashNow. Teams must respect the steps and confirm their presence on time. Failure to confirm attendance will result in your non-participation in the tournament without the possibility of subsequent integration.
