--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             
    <section id="paiment">
         <div class="container">
-            <h1>Paiment</h1>
+            <h1>PAIMENT</h1>
             <div class="row services">
                 <div class="col-md-3 text-center">
                     <div class="icon">
