--- a/index.html
+++ b/index.html
@@ -378,11 +378,7 @@
 
                     </div>
                     <h3>PAIMENT</h3>
-                  <p>Veuillez payer les frais  du tournoi  directement à l’admin du Tournoi 
-par La Carte « e-Dinar Jeune » de la poste tunisienne via D17  une application mobile pour Smartphone et IOS associée à votre compte 
-e-Dinar et vous permet la réalisation des paiements via QR code en toute sécurité et rapidité sinon par par virement bancaire 
-Pour toute question relative au règlement, merci de nous contacter au
-mail suivant : clashnow0@gmail.com
+                  <p>Please pay the tournament fees directly to the Tournament admin by La Carte "e-Dinar Jeune" from the Tunisian post via D17 a mobile application for Smartphone and IOS associated with your e-Dinar account and allows you to make payments via QR code safely and quickly if not by bank transfer For any question relating to payment, please contact us at the following email: clashnow0@gmail.com
 </p> 
                 </div>
               
