--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
               
             
               <li><i class="ion-ios-arrow-right"></i> <a href="#contact">CONTACT</a></li>
+              <li><i class="ion-ios-arrow-right"></i> <a href="#paiment">PAIMENT</a></li>
 
             </ul>
           </div>
