--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
                     </div>
                     <h3>PAIMENT</h3>
                   <p>Please pay the tournament fees directly to the Tournament admin by payment card "e-Dinar Jeune" from the Tunisian post </p> 
-                    <p> by using  D17 a mobile application for Smartphone and IOS associated with your e-Dinar account and allows you to make payments</p> 
-                  <p>  via QR code safely and quickly if not by bank transfer For any question relating to payment, </p> 
+                    <p> by using  D17 a mobile application for Smartphone and IOS associated with your e-Dinar account and allows you to make payments
+                    via QR code safely and quickly if not by bank transfer For any question relating to payment, </p> 
                  <p>  please contact us at the following email: clashnow0@gmail.com</p> 
 </p> 
                 </div>
