--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
               <p>All players must be online and ready to play at the match times defined by ClashNow. Teams must respect the steps and confirm their presence on time. Failure to confirm attendance will result in your non-participation in the tournament without the possibility of subsequent integration.
 
 
-                In cases of insults and harassment by the opponent during a match
-                Severe insults could lead to more severe penalties.
+               <p> In cases of insults and harassment by the opponent during a match
+                Severe insults could lead to more severe penalties. </p>
 </p>
           </div>
         
