--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
               <p>All players must be online and ready to play at the match times defined by ClashNow. Teams must respect the steps and confirm their presence on time. Failure to confirm attendance will result in your non-participation in the tournament without the possibility of subsequent integration.
 
 
-               <p> In cases of insults and harassment by the opponent during a match
-                Severe insults could lead to more severe penalties. </p>
+              In cases of insults and harassment by the opponent during a match
+                Severe insults could lead to more severe penalties. 
 </p>
           </div>
         
@@ -378,10 +378,10 @@
 
                     </div>
                     <h3>PAIMENT</h3>
-                  <p>Please pay the tournament fees directly to the Tournament admin by payment card "e-Dinar Jeune" from the Tunisian post </p> 
-                    <p> by using  D17 a mobile application for Smartphone and IOS associated with your e-Dinar account and allows you to make payments
-                    via QR code safely and quickly if not by bank transfer For any question relating to payment, </p> 
-                 <p>  please contact us at the following email: clashnow0@gmail.com</p> 
+                  <p>Please pay the tournament fees directly to the Tournament admin by payment card "e-Dinar Jeune" from the Tunisian post 
+                     by using  D17 a mobile application for Smartphone and IOS associated with your e-Dinar account and allows you to make payments
+                    via QR code safely and quickly if not by bank transfer For any question relating to payment,  
+                 please contact us at the following email: clashnow0@gmail.com
 </p> 
                 </div>
               
