--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                  <div class="follow"><b>Email:</b><i class="fa fa-envelope-o"></i>clashnow0@gmail.com
                   </div>
                  <div class="follow"><label><b>Find us on:</b></label>
-                     <a href="#"><i class="fa fa-facebook"></i></a>
+                     <a href="https://www.facebook.com/ClashNow-101549725087755"><i class="fa fa-facebook"></i></a>
                      <a href="https://www.instagram.com/clashnow_official/"><i class="fa fa-instagram"></i></a>
                  </div>
              </div>
