--- a/index.html
+++ b/index.html
@@ -371,7 +371,9 @@
    <section id="paiment">
         <div class="container">
             <h1>PAIMENT</h1>
-           
+            <div class="row services">
+                <div class="col-md-3 text-center">
+                   
 
                     </div>
                     <h3>PAIMENT</h3>
