--- a/index.html
+++ b/index.html
@@ -320,7 +320,9 @@
 
     <section id="clients" class="wow fadeInUp">
       <div class="container">
-
+<header class="section-header">
+          <h3>RULES</h3>
+        </header>
         
         <div class="row services">
           <div class="col-md-3 text-center">
