--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li class="menu-active"><a href="#intro">HOME</a></li>
           <li><a href="#about"> TOURNAMENT</a></li>
           <li><a href="#services">RESULTS</a></li>
-          <li><a href="#clients">RULES</a></li>
+          <li><a href="#rules">RULES</a></li>
           <li><a href="#contact">CONTACT</a></li>
           <li><a href="#paiment"> PAIMENT</a></li>
         </ul>
